<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.empiricomecampus.viewmodels.AddProfileViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAddProfile"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novi_profil"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="84dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/ime"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline4"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"


                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/prezime"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintWidth_default="percent"

            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.lastName}"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/smijer"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourse"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />


        <Spinner
            android:id="@+id/spinnerCourse"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:entries="@array/course_name"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCourse"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8"
            tools:setOnItemSelectedListener="@{viewModel.courseListener}" />

        <TextView
            android:id="@+id/tvSemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/semestarAdd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/spinnerSemestar"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCourse" />


        <Spinner
            android:id="@+id/spinnerSemestar"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:entries="@array/semester"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSemester"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8"
            tools:setOnItemSelectedListener="@{viewModel.semesterListener}" />


        <Button
            android:id="@+id/btnPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="@{()-> viewModel.uploadData()}"
            android:text="@string/kreiraj"
            app:layout_constraintEnd_toEndOf="@+id/spinnerSemestar"
            app:layout_constraintStart_toStartOf="@id/spinnerSemestar"
            app:layout_constraintTop_toBottomOf="@id/spinnerSemestar"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{()-> viewModel.navigateToProfile()}"
            android:text="@string/odustani"
            app:layout_constraintEnd_toEndOf="@+id/btnPost"
            app:layout_constraintStart_toStartOf="@id/btnPost"
            app:layout_constraintTop_toBottomOf="@id/btnPost"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>